# kcpp

./: .gitignore  CMakeLists.txt  README.md  kcpp.sln
headers/: ExcerciseOne.h  ExcerciseTwo.h  Shapes.h  WorkExampleZero.h
source/: ZadEnumExample.cc  main.cpp
src/: LPrzeciazaniePotega.cc  WorkExampleZero.cc  WorkExampleZeroA.cc  ZadClassExample.cc  ZadEnumExample.cc  ZadMainExample.cc  ZadPrzeciazanieDodaj.cc  ZadPrzeciazaniePlus.cc  ZadPrzeciazaniePole.cc  ZadStringExample.cc  ZadZwracanie.cc  main.cc  program
